--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-enterprise": "^26.2.1",
     "ag-grid-react": "^26.2.0",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.5.0",
     "react-day-picker": "^8.0.0-beta.36",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-pivot": "^4.4.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "^3.1.0",
     "react-transition-group": "^4.4.2",
