--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@ag-grid-enterprise/all-modules": "^26.2.1",
+    "@amcharts/amcharts5": "^5.1.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
@@ -17,10 +18,12 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-enterprise": "^26.2.1",
     "ag-grid-react": "^26.2.0",
+    "apexcharts": "^3.33.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.5.0",
